--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+<!-- default layout -->
 <html>
 <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
 </head>
 <body>
-        {{ content }}    
+    <div id="main-space">
+        {{ content }}
+    </div>
+           
 </body>
 </html>
