--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <!-- default layout -->
 <html>
 <head>
+    <link rel="stylesheet" href="/assets/css/main.css">
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
 </head>
