--- a/main.sass
+++ b/main.sass
@@ -7,7 +7,7 @@
     grid-gap: 10px 10px
     justify-items: stretch 
 
-dblock
+.dblock
     border: solid 1px black
     display: flex
     justify-content: center
