--- a/main.sass
+++ b/main.sass
@@ -1,6 +1,10 @@
 ---
 ---
 
+#top-logo
+    background-image: url(/assets/images/top_logo.jpg)
+    background-size: cover
+
 #main-space
     display: grid
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr
