--- a/main.sass
+++ b/main.sass
@@ -2,7 +2,7 @@
 ---
 
 #top-logo
-    background-image: url(/assets/images/top_logo.jpg)
+    background-image: url(/assets/img/top_logo.jpg)
     background-size: cover
 
 #main-space
