--- a/main.sass
+++ b/main.sass
@@ -5,7 +5,7 @@
     display: grid
     grid-auto-flow: dense
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr
-    grid-template-areas: . logo logo logo .
+    grid-template-areas: ". logo logo logo ."
     grid-gap: 10px 10px
     justify-items: stretch 
 
