--- a/main.sass
+++ b/main.sass
@@ -20,4 +20,5 @@
     justify-content: center
 
 @for $i from 1 through 5
-    .row-#{$i}: grid-column: #{$i}
+    .row-#{$i}
+        grid-column: $i
