--- a/main.sass
+++ b/main.sass
@@ -13,6 +13,7 @@
     background-image: url(/assets/img/top_logo.jpg)
     background-size: cover
     grid-area: logo
+    min-height: 40px
 
 .dblock
     border: solid 1px black
