--- a/main.sass
+++ b/main.sass
@@ -17,7 +17,7 @@
 
 .dblock
     border: solid 1px black
-    display: flex
+    // display: flex
     justify-content: center
 
 @for $i from 1 through 5
