--- a/main.sass
+++ b/main.sass
@@ -9,14 +9,11 @@
     grid-gap: 10px 10px
     justify-items: stretch 
 
-#top-logo
-    background-image: url(/assets/img/top_logo.jpg)
-    background-size: cover
-    grid-area: logo
-    min-height: 40px
+    img
+        width: 100%
 
 .dblock
-    border: solid 1px black
+    // border: solid 1px black
     // display: flex
     justify-content: center
 
