--- a/main.sass
+++ b/main.sass
@@ -9,8 +9,11 @@
     grid-gap: 10px 10px
     justify-items: stretch 
 
-    img
-        width: 100%
+#top-logo
+    grid-area: logo
+
+img
+    width: 100%
 
 .dblock
     // border: solid 1px black
