--- a/main.sass
+++ b/main.sass
@@ -19,6 +19,7 @@ img
     // border: solid 1px black
     // display: flex
     justify-content: center
+    text-align: center
 
 @for $i from 1 through 5
     .col-#{$i}
