--- a/main.sass
+++ b/main.sass
@@ -21,6 +21,9 @@ img
     justify-content: center
     text-align: center
 
+.storey-2
+     grid-row-end: span 2
+
 @for $i from 1 through 5
     .col-#{$i}
         grid-column: $i
