--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<!-- default layout -->
+<!-- new layout -->
 <html>
 <head>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/new.css">
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
 </head>
 <body>
-    
-    {{ content }}
-    
+    <div id="main-space">
+        {{ content }}
+    </div>
     <hr>
     {{ site.time }}       
 </body>
