--- a/main.sass
+++ b/main.sass
@@ -40,6 +40,9 @@ img
 $nav-color: #a4b1c0
 
 nav
+    position: sticky
+    top: 0
+
     background-color: $nav-color
     ul
         list-style: none
