--- a/main.sass
+++ b/main.sass
@@ -29,6 +29,10 @@ img
     justify-content: center
     text-align: center
 
+    p
+        text-align: justify
+
+
 .storey-2
     grid-row-end: span 2
 
