--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,18 @@
 <nav>
     <ul>
-        {% for p in site.pages %}
-        <li><a href="{{ p.url}}">{{ p.title }}</a> </li>
-        {% endfor %}
+        {%- for p in site.pages -%}
+            {% if p.main %}
+                <li><a href="{{ p.url}}">{{ p.title }}</a> </li>
+            {% endif %}
+        {%- endfor -%}
+    </ul>
+</nav>
+<nav>
+    <ul>
+        {%- for p in site.pages -%}
+        {% if p.cat==page.cat %}
+            <li><a href="{{ p.url}}">{{ p.title }}</a> </li>
+        {% endif %}
+        {%- endfor -%}
     </ul>
 </nav>
