--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -2,7 +2,7 @@
 <!-- new layout -->
 <html>
 <head>
-    <link rel="stylesheet" href="/new1.css">
+    <link rel="stylesheet" href="/v2.css">
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
 </head>
