--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -8,12 +8,14 @@
         {%- endfor -%}
     </ul>
 </nav>
-<nav>
-    <ul>
-        {%- for p in sort_pages -%}
-        {% if p.cat == page.cat %}
-            <li>{{p.sortid}} <a href="{{ p.url}}">{{ p.title }}</a> </li>
-        {% endif %}
-        {%- endfor -%}
-    </ul>
-</nav>
+{%- if page.submenu -%}
+    <nav>
+        <ul>
+            {%- for p in sort_pages -%}
+                {% if p.cat == page.cat %}
+                    <li>{{p.sortid}} <a href="{{ p.url}}">{{ p.title }}</a> </li>
+                {% endif %}
+            {%- endfor -%}
+        </ul>
+    </nav>
+{% endif %}
