--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -11,6 +11,10 @@
     <div id="main-space">
         {{ content }}
     </div>
+    <div id="callback">
+        Для получения достоверной информации, Вам необходимо профессионально обследовать ваш объект.<br>
+        Свяжитесь с нами!
+    </div>
     <hr>
     {{ site.time }}       
 </body>
