--- a/v2.sass
+++ b/v2.sass
@@ -6,3 +6,7 @@ nav
         list-style: none
         display: flex
         justify-content: space-around
+
+#callback
+    text-align: center
+    font-stretch: bold
