--- a/v2.sass
+++ b/v2.sass
@@ -2,6 +2,13 @@
 ---
 
 nav
+    &#main
+        position: sticky
+        top: 0
+    &sub
+        border-radius: 10px 10px 0 0
+        border: solid 1px black
+        border-bottom: none
     ul
         list-style: none
         display: flex
