--- a/v2.sass
+++ b/v2.sass
@@ -1,11 +1,14 @@
 ---
 ---
 
+$main-color: #6d3df8
+
 nav
     &#main
         position: sticky
         top: 0
-    &sub
+        background-color: $main-color
+    &#sub
         border-radius: 10px 10px 0 0
         border: solid 1px black
         border-bottom: none
