--- a/v2.sass
+++ b/v2.sass
@@ -1,17 +1,27 @@
 ---
 ---
 
-$main-color: #6d3df8
+$main-color = #6d3df8
+$bg-color = white
+$sub-nav-color = $bg-color
 
 nav
     &#main
         position: sticky
         top: 0
         background-color: $main-color
-    &#sub
-        border-radius: 10px 10px 0 0
-        border: solid 1px black
-        border-bottom: none
+    &#sub        
+        background-color: $bg-color
+
+        li
+            border-radius: 10px 10px 0 0
+            border: solid 1px black
+            border-bottom: none
+
+        &:hover
+            background-color: darken($bg-color,20%)
+
+            
     ul
         list-style: none
         display: flex
