--- a/v2.sass
+++ b/v2.sass
@@ -1,9 +1,9 @@
 ---
 ---
 
-$main-color = #6d3df8
-$bg-color = white
-$sub-nav-color = $bg-color
+$main-color: #6d3df8
+$bg-color: white
+$sub-nav-color: $bg-color
 
 nav
     &#main
@@ -26,6 +26,9 @@ nav
         list-style: none
         display: flex
         justify-content: space-around
+
+        li
+            padding: 10px
 
 #callback
     text-align: center
