--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -2,6 +2,7 @@
 <!-- new layout -->
 <html>
 <head>
+    <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />">
     <link rel="stylesheet" href="/v2.css">
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
