--- a/v2.sass
+++ b/v2.sass
@@ -17,6 +17,8 @@ nav
             border-radius: 10px 10px 0 0
             border: solid 1px black
             border-bottom: none
+            flex-grow: 1
+            text-align: center
 
             &:hover
                 background-color: darken($bg-color,20%)
@@ -26,6 +28,7 @@ nav
         list-style: none
         display: flex
         justify-content: space-around
+        // padding-inline-start: 0 // 
 
         li
             padding: 10px
