--- a/v2.sass
+++ b/v2.sass
@@ -9,6 +9,7 @@ nav
     &#main
         position: sticky
         top: 0
+        color: white
         background-color: $main-color
 
         li:hover
