--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- new layout -->
+<!-- uni layout -->
 <html>
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
