--- a/v2.sass
+++ b/v2.sass
@@ -24,10 +24,13 @@ nav
 
         li
             border-radius: 10px 10px 0 0
-            border: solid 1px black
-            border-bottom: none
+            border: solid 1px black            
             flex-grow: 1
             text-align: center
+        
+            &.act
+                border-bottom: none
+
 
             &:hover
                 background-color: darken($bg-color,20%)
@@ -37,7 +40,8 @@ nav
         list-style: none
         display: flex
         justify-content: space-around
-        padding-inline-start: 0 // 
+        padding-inline-start: 0 //
+        margin-block-start: 0 //  
 
         li
             padding: 10px
