--- a/v2.sass
+++ b/v2.sass
@@ -27,13 +27,15 @@ nav
             border: solid 1px black            
             flex-grow: 1
             text-align: center
+            background-color: darken($bg-color,10%)
         
             &.act
                 border-bottom: none
+                background-color: $bg-color
 
 
             &:hover
-                background-color: darken($bg-color,20%)
+                background-color: darken($bg-color,30%)
 
             
     ul
