--- a/v2.sass
+++ b/v2.sass
@@ -13,6 +13,11 @@ nav
         color: $color
         background-color: $main-color
 
+        li.act
+            color: $main-color
+            background-color: $color
+            
+
         li:hover
             background-color: darken($main-color,20%)
         a
