--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     {% include menu.html %}
+    <div id="top-logo">
+        <img src="/assets/img/toplogo/{{ page.sortid }}.jpg">
+    </div>
     <div id="main-space">
         {{ content }}
     </div>
