--- a/v2.sass
+++ b/v2.sass
@@ -43,8 +43,7 @@ nav
 
         
             &.act
-                border-bottom: none
-                
+                border-bottom: none      
 
 
             
@@ -63,3 +62,6 @@ nav
 #callback
     text-align: center
     font-stretch: bold
+
+#top-logo img
+    width: 100%
