--- a/v2.sass
+++ b/v2.sass
@@ -63,5 +63,8 @@ nav
     text-align: center
     font-stretch: bold
 
-#top-logo img
-    width: 100%
+#top-logo
+    text-align: center
+
+    img
+        width: 80%
