--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -19,6 +19,7 @@
         Для получения достоверной информации, Вам необходимо профессионально обследовать ваш объект.<br>
         Свяжитесь с нами!
     </div>
+    {% include footer.html %}
     <hr>
     {{ site.time }}       
 </body>
