--- a/v2.sass
+++ b/v2.sass
@@ -16,6 +16,7 @@ nav
         li.act
             color: $main-color
             background-color: $color
+            pointer: default
         a
             color: $color            
 
@@ -68,3 +69,6 @@ nav
 
     img
         width: 80%
+
+footer
+    background-color: $main-color
