--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <link rel="stylesheet" href="/v2.css">
+    <link rel="stylesheet" href="/v2.css?{{site.time | date: '%s' }}">
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
 </head>
