--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 ﻿<!-- footer -->
 <footer>
     <div>
-        {{ include "about.md" | markdownify }}
+        {{ include about.md | markdownify }}
     </div>
     <div>
         {% include include_md.html file_name="sitemap.md" %}
