--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer>
     <div>
         
-            {% include about.md %}
+            {% include include_md.html file_name="about.md" %}
         
     </div>
     <div>
