--- a/_includes/include_md.html
+++ b/_includes/include_md.html
@@ -1,2 +1,1 @@
-﻿{% capture my_include %}{% include {{ include.file_name }} %}{% endcapture %}
-<!-- [[ --> {{ my_include | markdownify }} <!-- ]]  -->
+﻿{% capture my_include %}{% include {{ include.file_name }} %}{% endcapture %}{{ my_include | markdownify }}
