--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -12,9 +12,9 @@
     <div id="top-logo">
         <img src="/assets/img/toplogo/{{ page.sortid }}.jpg">
     </div>
-    <div id="main-space">
+    <main>
         {{ content }}
-    </div>
+    </main>
     <div id="callback">
         Для получения достоверной информации, Вам необходимо профессионально обследовать ваш объект.<br>
         Свяжитесь с нами!
