--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -19,7 +19,8 @@
         Для получения достоверной информации, Вам необходимо профессионально обследовать ваш объект.<br>
         Свяжитесь с нами!
     </div>
-    {% include footer.html %}
-    {{ site.time }}       
+    {{ site.time }}
+    {% include footer.html %}    
+    <div id="footer"></div>       
 </body>
 </html>
