--- a/v2.sass
+++ b/v2.sass
@@ -1,7 +1,7 @@
 ---
 ---
 
-$main-color: #6d3df8
+$main-color: #98b8e1
 $bg-color: white
 $sub-nav-color: $bg-color
 
@@ -77,3 +77,9 @@ footer
     & > div
         flex: 1
         padding: 10px
+
+.footer
+    width: 28vh
+    background-image: url(/assets/img/footer.jpg)
+    background-size: cover
+    background-attachment: fixed
