--- a/v2.sass
+++ b/v2.sass
@@ -79,7 +79,7 @@ footer
         padding: 10px
 
 .footer
-    width: 28vh
+    height: 28vh
     background-image: url(/assets/img/footer.jpg)
     background-size: cover
     background-attachment: fixed
