--- a/v2.sass
+++ b/v2.sass
@@ -78,7 +78,7 @@ footer
         flex: 1
         padding: 10px
 
-.footer
+#footer
     height: 28vh
     background-image: url(/assets/img/footer.jpg)
     background-size: cover
