--- a/v2.sass
+++ b/v2.sass
@@ -81,5 +81,6 @@ footer
 #footer
     height: 28vw
     background-image: url(/assets/img/footer.jpg)
-    background-size: cover
+    background-size: contain
     background-attachment: fixed
+    background-position: bottom
