--- a/v2.sass
+++ b/v2.sass
@@ -9,7 +9,7 @@ nav
     &#main
         position: sticky
         top: 0
-        $color: white
+        $color: black
         color: $color
         background-color: $main-color
 
@@ -30,8 +30,8 @@ nav
 
         li
             border-radius: 10px 10px 0 0
-            border: solid 1px black            
-            flex-grow: 1
+            border: solid 1px $main-color            
+            flex: 1
             text-align: center
             background-color: $bg-color
             
