--- a/v2.sass
+++ b/v2.sass
@@ -15,7 +15,7 @@ nav
 
         li.act
             color: $main-color
-            background-color: $color
+            background-color: $bg-color
             pointer: default
         a
             color: $color            
