--- a/v2.sass
+++ b/v2.sass
@@ -14,7 +14,7 @@ nav
         background-color: $main-color
 
         li.act
-            color: $main-color
+            color: $color
             background-color: $bg-color
             pointer: default
         a
