--- a/v2.sass
+++ b/v2.sass
@@ -73,14 +73,15 @@ footer
     display: flex
     justify-content: space-around
     background-color: $main-color
+    background-image: url(/assets/img/footer.jpg)
+    background-size: contain
+    background-attachment: fixed
+    background-position: bottom
+    background-repeat: no-repeat
+    padding-bottom: 5vw
 
     & > div
         flex: 1
         padding: 10px
 
-#footer
-    height: 28vw
-    background-image: url(/assets/img/footer.jpg)
-    background-size: contain
-    background-attachment: fixed
-    background-position: bottom
+   
