--- a/_includes/el-figure.html
+++ b/_includes/el-figure.html
@@ -1,4 +1,4 @@
 ﻿<figure>
-    <img src="/assets/img/{{ include.url }}">
+    <img src="/img/{{ include.url }}">
     <figcaption>{{ include.title }}</figcaption>
 </figure>
