--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -3,16 +3,19 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <link rel="stylesheet" href="/v2.css?{{site.time | date: '%s' }}">
+    <link rel="stylesheet" href="css/uikit.min.css?{{site.time | date: '%s' }}" />
+    <script src="js/uikit.min.js"></script>
+    <script src="js/uikit-icons.min.js"></script>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
 </head>
 <body>
     {% include menu.html %}
+    {% include uk-breadcrumb.html %}
     <div id="top-logo">
-        <img src="/assets/img/toplogo/{{ page.sortid }}.jpg">
+        <img src="/img/toplogo/{{ page.sortid }}.jpg">
     </div>
-    <main>
+    <main class="uk-container">
         {{ content }}
     </main>
     <div id="callback">
