--- a/v2.sass
+++ b/v2.sass
@@ -73,7 +73,7 @@ footer
     display: flex
     justify-content: space-around
     background-color: $main-color
-    background-image: url(/assets/img/footer.jpg)
+    background-image: url(/img/footer.jpg)
     background-size: contain
     background-attachment: fixed
     background-position: bottom
