--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,37 +1,41 @@
-<nav class="uk-navbar-container" uk-navbar>
-    <ul class="uk-navbar-nav">
-        {% assign sort_pages = site.pages | sort: "sortid" %}
-        {%- for p in sort_pages -%}
-            {% if p.main %}                
-                {% if p.cat == page.cat %}
-                    <li class="uk-active">
-                        <span>{{ p.title }}</span>
-                    </li>
-                {% else %}
-                    <li>
-                        <a href="{{ p.url}}">{{ p.title }}</a>
-                    </li>
-                {% endif %}                
-            {% endif %}
-        {%- endfor -%}
-    </ul>
-</nav>
-{%- if page.submenu -%}
-    <nav id="sub">
-        <ul class="uk-subnav uk-subnav-pill">
-            {%- for p in sort_pages -%}
-                {% if p.cat == page.cat and p.main != true %}
-                    {% if p.url == page.url %}
-                        <li class="uk-active">                        
-                            <span>{{ p.title }}</span>
-                        </li>
-                    {% else %}
-                        <li>
-                            <a href="{{ p.url}}">{{ p.title }}</a> 
-                        </li>    
-                        {% endif %}
-                {% endif %}
-            {%- endfor -%}
-        </ul>
+<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+    <nav class="uk-navbar-container" uk-navbar>
+        <div class="uk-navbar-left">
+            <ul class="uk-navbar-nav">
+                {% assign sort_pages = site.pages | sort: "sortid" %}
+                {%- for p in sort_pages -%}
+                    {% if p.main %}                
+                        {% if p.cat == page.cat %}
+                            <li class="uk-active">
+                                <span>{{ p.title }}</span>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="{{ p.url}}">{{ p.title }}</a>
+                            </li>
+                        {% endif %}                
+                    {% endif %}
+                {%- endfor -%}
+            </ul>
+        </div>
     </nav>
-{% endif %}
+</div>
+    {%- if page.submenu -%}
+        <nav id="sub">
+            <ul class="uk-subnav uk-subnav-pill" uk-margin>
+                {%- for p in sort_pages -%}
+                    {% if p.cat == page.cat and p.main != true %}
+                        {% if p.url == page.url %}
+                            <li class="uk-active">                        
+                                <span>{{ p.title }}</span>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="{{ p.url}}">{{ p.title }}</a> 
+                            </li>    
+                            {% endif %}
+                    {% endif %}
+                {%- endfor -%}
+            </ul>
+        </nav>
+    {% endif %}
