--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,33 +1,35 @@
 ﻿<!-- footer -->
-<footer>
-    <div>
-        
-            {% include include_md.html file_name="about.md" %}
-        
+<div class="uk-section-default">
+    <div class="uk-section uk-light uk-background-cover" style="background-image: url(/img/footer.jpg)">
+        <div class="uk-container uk-flex">
+            <div>  
+                    {% include include_md.html file_name="about.md" %}                
+            </div>
+            <div>
+                {% include include_md.html file_name="sitemap.md" %}
+                {% assign sort_pages = site.pages | sort: "sortid" %}
+                <ul>
+                    {%- for hi in sort_pages -%}
+                        {% if hi.main %}
+                            <li>
+                                <a href="{{ hi.url}}"><nobr>{{ hi.title }}</nobr></a>
+                                <ul>
+                                    {%- for lo in sort_pages -%}
+                                        {% if lo.cat == hi.cat and lo.main != true %}
+                                            <li>
+                                                <a href="{{ lo.url}}"><nobr>{{ lo.title }}</nobr></a>
+                                            </li>
+                                        {% endif %}
+                                    {%- endfor -%}
+                                </ul>                    
+                            </li>
+                        {% endif %}
+                    {%- endfor -%}
+                </ul>
+            </div>
+            <div>
+                {% include include_md.html file_name="contacts.md" %}
+            </div>
+        </div>
     </div>
-    <div>
-        {% include include_md.html file_name="sitemap.md" %}
-        {% assign sort_pages = site.pages | sort: "sortid" %}
-        <ul>
-            {%- for hi in sort_pages -%}
-                {% if hi.main %}
-                    <li>
-                        <a href="{{ hi.url}}"><nobr>{{ hi.title }}</nobr></a>
-                        <ul>
-                            {%- for lo in sort_pages -%}
-                                {% if lo.cat == hi.cat and lo.main != true %}
-                                    <li>
-                                        <a href="{{ lo.url}}"><nobr>{{ lo.title }}</nobr></a>
-                                    </li>
-                                {% endif %}
-                            {%- endfor -%}
-                        </ul>                    
-                    </li>
-                {% endif %}
-            {%- endfor -%}
-        </ul>
-    </div>
-    <div>
-        {% include include_md.html file_name="contacts.md" %}
-    </div>
-</footer>
+</div>
