--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -16,11 +16,11 @@
     </div>
     <main class="uk-container">
         {{ content }}
+
+        <div class="uk-align-center uk-box-shadow-medium uk-animation-shake">
+                Для получения достоверной информации, Вам необходимо профессионально обследовать ваш объект.<br>   Свяжитесь с нами!
+        </div>
     </main>
-    <div id="callback">
-        Для получения достоверной информации, Вам необходимо профессионально обследовать ваш объект.<br>
-        Свяжитесь с нами!
-    </div>
     {{ site.time }}
     {% include footer.html %}   
 </body>
