--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,7 +7,7 @@
                     {% if p.main %}                
                         {% if p.cat == page.cat %}
                             <li class="uk-active">
-                                <span>{{ p.title }}</span>
+                                <a>{{ p.title }}</a>
                             </li>
                         {% else %}
                             <li>
@@ -18,6 +18,18 @@
                 {%- endfor -%}
             </ul>
         </div>
+
+        <div class="uk-navbar-right">
+            <div>
+                <a class="uk-navbar-toggle" uk-search-icon href="#"></a>
+                <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 0">
+                    <form class="uk-search uk-search-navbar uk-width-1-1">
+                        <input class="uk-search-input" type="search" placeholder="Search..." autofocus>
+                    </form>
+                </div>
+            </div>        
+        </div>
+
     </nav>
 </div>
     {%- if page.submenu -%}
