--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -12,7 +12,7 @@
     {% include menu.html %}
     {% include uk-breadcrumb.html %}
     <div id="top-logo">
-        <img src="/img/toplogo/{{ page.sortid }}.jpg">
+        <img src="/img/toplogo/{{ page.sortid }}.jpg" class="uk-align-center">
     </div>
     <main class="uk-container">
         {{ content }}
