--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -17,7 +17,7 @@
     <main class="uk-container">
         {{ content }}
         <div class="uk-animation-toggle" tabindex="0">
-            <div class="uk-align-center uk-box-shadow-medium uk-animation-shake">
+            <div class="uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
                 Для получения достоверной информации, Вам необходимо профессионально обследовать ваш объект.<br>   Свяжитесь с нами!
             </div>
         </div>
