--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 ﻿<!-- footer -->
 <div class="uk-section-default">
-    <div class="uk-section uk-light uk-background-contain" style="background-image: url(/img/footer.jpg)">
+    <div class="uk-section uk-light uk-background-cover" style="background-image: url(/img/footer.jpg)">
         <div class="uk-container uk-flex">
             <div>  
                     {% include include_md.html file_name="about.md" %}                
