--- a/_includes/uk-breadcrumb.html
+++ b/_includes/uk-breadcrumb.html
@@ -19,7 +19,7 @@
                 {% if p.cat == page.cat and p.main != true %}
                     {% if p.url == page.url %}
                         <li>                        
-                            <span>{{ p.title }}</span>
+                            <a>{{ p.title }}</a>
                         </li>
                     {% else %}                           
                     {% endif %}
