--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -11,7 +11,7 @@
                             </li>
                         {% else %}
                             <li>
-                                <a href="{{ p.url}}">{{ p.title }}</a>
+                                <a href="{{ p.url}}" class="uk-button-text">{{ p.title }}</a>
                             </li>
                         {% endif %}                
                     {% endif %}
