--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -20,7 +20,7 @@
                     {{ content }}
             </article>        
         <div class="uk-animation-toggle" tabindex="0">
-            <div class="uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
+            <div class="uk-background-primary uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
                 Для получения достоверной информации, Вам необходимо профессионально обследовать ваш объект.<br>   Свяжитесь с нами!
             </div>
         </div>
