--- a/_includes/uk-breadcrumb.html
+++ b/_includes/uk-breadcrumb.html
@@ -1,30 +1,24 @@
 {% assign sort_pages = site.pages | sort: "sortid" %}
 <ul class="uk-breadcrumb">
+    
     <li>
         <a href="/">Home</a>
     </li>    
     {%- for p in sort_pages -%}
-        {% if p.main %}                
-            {% if p.cat == page.cat %}
-                <li>
-                    <a href="{{ p.url}}">{{ p.title }}</a>
-                </li>
-            {% else %}                
-            {% endif %}                
-        {% endif %}
+        {% if page.cat == 0 or ( p.main and page.cat == p.cat and page.url != p.url ) %}
+            <li>
+                <!--  {{ page.cat }} / {{ p.main }} / {{ page.main }} -->
+                <a href="{{ p.url}}">{{ p.title }}</a>
+            </li>
+        {% enif %}        
     {%- endfor -%}
-    {%- if page.submenu -%}    
-        <ul>
-            {%- for p in sort_pages -%}
-                {% if p.cat == page.cat and p.main != true %}
-                    {% if p.url == page.url %}
-                        <li>                        
-                            <a>{{ p.title }}</a>
-                        </li>
-                    {% else %}                           
-                    {% endif %}
-                {% endif %}
-            {%- endfor -%}
-        </ul>    
-{% endif %}
+        
+    {%- for p in sort_pages -%}
+        {% if p.url == page.url  and page.cat != 0 %}            
+            <li>                        
+                <span>{{ p.title }}</span>
+            </li>     
+        {% endif %}
+    {%- endfor -%} 
+
 </ul>
