--- a/_includes/uk-breadcrumb.html
+++ b/_includes/uk-breadcrumb.html
@@ -5,7 +5,7 @@
         <a href="/">Home</a>
     </li>    
     {%- for p in sort_pages -%}
-        {% if page.cat == 0 or ( p.main and page.cat == p.cat and page.url != p.url )  %}
+        {% if p.main and page.cat == p.cat and page.url != p.url amd p.cat != 0 or page.cat == 0 %}
             <li>
                 <!--  {{ page.cat }} / {{ p.main }} / {{ page.main }} -->
                 <a href="{{ p.url}}">{{ p.title }}</a>
