--- a/_includes/uk-breadcrumb.html
+++ b/_includes/uk-breadcrumb.html
@@ -1,11 +1,7 @@
 {% assign sort_pages = site.pages | sort: "sortid" %}
-<ul class="uk-breadcrumb">
-    
-    <li>
-        <a href="/">Home</a>
-    </li>    
+<ul class="uk-breadcrumb"> 
     {%- for p in sort_pages -%}
-        {% if p.main and page.cat == p.cat and page.url != p.url amd p.cat != 0 or page.cat == 0 %}
+        {% if p.main and page.cat == p.cat and page.url != p.url and p.cat != 0 or page.cat == 0 %}
             <li>
                 <!--  {{ page.cat }} / {{ p.main }} / {{ page.main }} -->
                 <a href="{{ p.url}}">{{ p.title }}</a>
