--- a/_includes/uk-breadcrumb.html
+++ b/_includes/uk-breadcrumb.html
@@ -1,23 +1,25 @@
-{% assign sort_pages = site.pages | sort: "sortid" %}
-<ul class="uk-breadcrumb"> 
-    {%- for p in sort_pages -%}
-        {% if p.main and page.cat == p.cat and page.url != p.url %}
-            <li>               
-                <a href="{{ p.url}}">{{ p.title }}</a>
-            </li>
-        {% elsif p.cat == 0 and page.cat != 0 %}
-            <li>
-                <a href="{{ p.url}}">{{ p.title }}</a>
-            </li>            
-        {% endif %}        
-    {%- endfor -%}
-        
-    {%- for p in sort_pages -%}
-        {% if p.url == page.url  %}            
-            <li>                        
-                <span>{{ p.title }}</span>
-            </li>     
-        {% endif %}
-    {%- endfor -%} 
+{% if page.cat > 0 %}
+    {% assign sort_pages = site.pages | sort: "sortid" %}
+    <ul class="uk-breadcrumb"> 
+        {%- for p in sort_pages -%}
+            {% if p.main and page.cat == p.cat and page.url != p.url %}
+                <li>               
+                    <a href="{{ p.url}}">{{ p.title }}</a>
+                </li>
+            {% elsif p.cat == 0 and page.cat != 0 %}
+                <li>
+                    <a href="{{ p.url}}">{{ p.title }}</a>
+                </li>            
+            {% endif %}        
+        {%- endfor -%}
+            
+        {%- for p in sort_pages -%}
+            {% if p.url == page.url  %}            
+                <li>                        
+                    <span>{{ p.title }}</span>
+                </li>     
+            {% endif %}
+        {%- endfor -%} 
 
-</ul>
+    </ul>
+{% endif %}
