--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,29 +4,23 @@
             <ul class="uk-navbar-nav">
                 {% assign sort_pages = site.pages | sort: "sortid" %}
                 {%- for p in sort_pages -%}
-                    {% if p.main %}                
-                        {% if p.cat == page.cat %}
-                            <li class="uk-active">
-                                <a>{{ p.title }}</a>
-                                {% if p.submenu %}
-                                    <div class="uk-navbar-dropdown">
-                                        <ul class="uk-nav uk-navbar-dropdown-nav">
-                                            {%- for s in sort_pages -%}
-                                                {% if s.main != true and s.cat == p.cat %}
-                                                    <li>
-                                                        <a href="{{ s.url}}">{{ s.title }}</a>
-                                                    </li>
-                                                {% endif %} 
-                                            {%- endfor -%}
-                                        </ul>
-                                    </div>                                    
-                                {% endif %}
-                            </li>
-                        {% else %}
-                            <li>
-                                <a href="{{ p.url}}" class="uk-button-text">{{ p.title }}</a>
-                            </li>
-                        {% endif %}                
+                    {% if p.main %}                        
+                        <li class="uk-active">                            
+                            <a href="p.url">{{ p.title }}</a>
+                            {% if p.submenu %}
+                                <div class="uk-navbar-dropdown">
+                                    <ul class="uk-nav uk-navbar-dropdown-nav">
+                                        {%- for s in sort_pages -%}
+                                            {% if s.main != true and s.cat == p.cat %}
+                                                <li>
+                                                    <a href="{{ s.url}}">{{ s.title }}</a>
+                                                </li>
+                                            {% endif %} 
+                                        {%- endfor -%}
+                                    </ul>
+                                </div>                                    
+                            {% endif %}
+                        </li> 
                     {% endif %}
                 {%- endfor -%}
             </ul>
