--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,7 +6,7 @@
                 {%- for p in sort_pages -%}
                     {% if p.main %}                        
                         <li class="uk-active">                            
-                            <a href="p.url">{{ p.title }}</a>
+                            <a href="{{ p.url }}">{{ p.title }}</a>
                             {% if p.submenu %}
                                 <div class="uk-navbar-dropdown">
                                     <ul class="uk-nav uk-navbar-dropdown-nav">
